fix: broken css

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -61,12 +61,12 @@
   }
   
   blockquote {
-    @apply divide-x-4
-    @apply divide-solid 
-    @apply divide-gray-400
-    @apply divide-gray-800
-    @apply ml-4
-    @apply my-4
+    @apply divide-x-4;
+    @apply divide-solid;
+    @apply divide-gray-400;
+    @apply divide-gray-800;
+    @apply ml-4;
+    @apply my-4;
   }
 
   code {
